--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="about.html">
+ <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+           <a class="navbar-brand" href="/motorspot/about.html">
             <img src="logo1.jpg" width="50" height="40" class="d-inline-block align-top" alt="" loading="lazy">
             motorSPOT
         </a>
@@ -29,13 +29,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/motorspot/index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="about.html">about</a>
+                    <a class="nav-link" href="/motorspot/about.html">about</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contact.html">contact</a>
+                    <a class="nav-link" href="/motorspot/contact.html">contact</a>
                 </li>
 
             </ul>
