card deck padding 15px

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </a>
 
     </div>
-    <div class="card-deck">
+    <div class="card-deck" style="padding:15px;">
         <div class="card border-info bg-light">
             <img src="re2.jpg" class="card-img-top" alt="...">
             <div class="card-body">
