--- a/contact.html
+++ b/contact.html
@@ -44,9 +44,9 @@
       </form>
     </div>
   </nav>
-  <h1>contact</h1>
+  <h1 style="padding-left:10px;">contact</h1>
 
-  <form>
+  <form style="padding:10px;">
     <div class="form-row">
       <div class="col-md-6 mb-3">
         <label for="validationDefault01">First name</label>
